# Mini3DEngine

./: .clangd  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.template
cmake/: ProjectOptions.cmake  ProjectWarnings.cmake
engine/: CMakeLists.txt  engine.c  my_math.c  my_math.h
game/: main.c
test/: test.h
